# ranmath

./: CMakeLists.txt  LICENSE  README.md
include/ranmath/: aabb.hpp  calc.hpp  concepts.hpp  constants.hpp  forward.hpp  funcs.hpp  integrator.hpp  interpolator.hpp  lerp.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  ran.hpp  transform_space.hpp  transform_view.hpp  vector2.hpp  vector3.hpp  vector4.hpp  version.hpp
res/: ranmath.xcf
script/: single.py
test/: CMakeLists.txt
test/src/: thing.cpp
